Fixed dark mode for leaderboard screen not showing majors or student text

--- a/frontend/src/components/LeaderboardTable/LeaderboardTable.scss
+++ b/frontend/src/components/LeaderboardTable/LeaderboardTable.scss
@@ -23,7 +23,7 @@
 
 .topMajor {
     @extend .bg-primary;
-    @extend .text-white;
+    color: $light-text-primary;
 }
 
 .normalMajor {
@@ -37,7 +37,7 @@
 
 .rankMajor {
     @extend .fw-bold;
-    
+    color: $light-text-primary;
 }
 
 .xp {
