--- a/frontend/src/screens/NewLeaderboardScreen/NewLeaderboardScreen.scss
+++ b/frontend/src/screens/NewLeaderboardScreen/NewLeaderboardScreen.scss
@@ -77,7 +77,7 @@
     //border: 1px solid $secondary;
     box-shadow: 0 1px 3px rgba(0,0,0,0.06);
     font-size: 0.9rem;
-
+    color: $light-text-primary;
     .studentRank {
         font-weight: 700;
     }
